--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -25,7 +25,7 @@ jobs:
             nodejs-version: 18
 
     runs-on: ${{ matrix.os }}
-    
+
     steps: 
       - name: Checkout code
         uses: actions/checkout@v5
@@ -39,4 +39,17 @@ jobs:
         run: npm install
 
       - name: Run tests
+        id: nodejs-unit-testing-run-tests
         run: npm test
+
+      - name: Archive test results
+        if: steps.nodejs-unit-testing-run-tests.outcome == 'success' || steps.nodejs-unit-testing-run-tests.outcome == 'failure'
+        uses: actions/upload-artifact@v4.6.2
+        with:
+          name: mocha-test-results
+          path: test-results.xml
+
+      # - name: Download test results
+      #   uses: actions/download-artifact@v3
+      #   with:
+      #     name: test-results-${{ matrix.os }}-${{ matrix.nodejs-version }}
