--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -48,8 +48,29 @@ jobs:
         with:
           name: mocha-test-results-${{ matrix.os }}-${{ matrix.nodejs-version }}
           path: test-results.xml
+  code-coverage:
+    name: Code Coverage
+    needs: unit-testing
+    runs-on: ubuntu-latest
 
-      # - name: Download test results
-      #   uses: actions/download-artifact@v3
-      #   with:
-      #     name: test-results-${{ matrix.os }}-${{ matrix.nodejs-version }}
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v5
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v4.4.0
+        with:
+          node-version: 18
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Run code coverage
+        run: npm run coverage
+
+      - name: Archive code coverage results
+        uses: actions/upload-artifact@v4.6.2
+        with:
+          name: code-coverage-results
+          path: coverage
+          retention-days: 5
