--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -76,3 +76,26 @@ jobs:
           name: code-coverage-results
           path: coverage
           retention-days: 5
+
+  docker-build:
+    name: Docker Build
+    needs: code-coverage
+    runs-on: ubuntu-latest
+    permissions:
+      packages: write
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v5
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3.5.0
+        with:
+          username: ${{ vars.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: GHCR Login
+        uses: docker/login-action@v3.5.0
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
