--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -83,6 +83,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       packages: write
+      contents: read
     steps:
       - name: Checkout code
         uses: actions/checkout@v5
