--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -100,3 +100,32 @@ jobs:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build Docker file
+        uses: docker/build-push-action@v6
+        with:
+          push: false
+          tags: ${{ vars.DOCKER_USERNAME }}:${{ github.sha }}
+
+      - name: Test Docker image
+        run: |  
+          docker images
+          docker run --rm --name solar-system-app -d \
+          -p 3000:3000 \
+          -e MONGO_USERNAME=$MONGO_USERNAME \
+          -e MONGO_PASSWORD=$MONGO_PASSWORD \
+          -e MONGO_URI=$MONGO_URI \
+          ${{ vars.DOCKER_USERNAME }}:${{ github.sha }}
+          export IP=$(docker inspect -f '{{range .NetworkSettings.Networks}}{{.IPAddress}}{{end}}' solar-system-app)
+          echo $IP
+          echo Testing Image URL using wget
+          wget -q -O - 127.0.0.1:3000/live | grep  live
+
+      
+      - name: Build Docker file
+        uses: docker/build-push-action@v6
+        with:
+          push: true
+          tags: |
+            ${{ vars.DOCKER_USERNAME }}:${{ github.sha }}
+            ghcr.io/${{ github.repository_owner }}/solar-system:${{ github.sha }}
