--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -29,3 +29,20 @@ jobs:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
           password: ${{ secrets.GITHUB_TOKEN }}
+     
+      - name: Build Docker file
+        uses: docker/build-push-action@v6
+        with:
+          push: false
+          tags: ${{ vars.DOCKER_USERNAME }}:${{ github.sha }}
+
+      - name: Test Docker image
+        run: |  
+          docker images
+          docker run --rm --name solar-system-app -d \
+          -p 3000:3000 \
+          -e MONGO_USERNAME=${{ secrets.MONGO_USERNAME }} \
+          -e MONGO_PASSWORD=${{ secrets.MONGO_PASSWORD }} \
+          -e MONGO_URI=${{ secrets.MONGO_URI }} \
+          ${{ vars.DOCKER_USERNAME }}:${{ github.sha }} npm test
+      
