--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -105,7 +105,7 @@ jobs:
         uses: docker/build-push-action@v6
         with:
           push: false
-          tags: ${{ vars.DOCKER_USERNAME }}:${{ github.sha }}
+          tags: ${{ vars.DOCKER_USERNAME }}/solar-system:${{ github.sha }}
 
       - name: Test Docker image
         run: |  
