--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -115,7 +115,7 @@ jobs:
           -e MONGO_USERNAME=$MONGO_USERNAME \
           -e MONGO_PASSWORD=$MONGO_PASSWORD \
           -e MONGO_URI=$MONGO_URI \
-          ${{ vars.DOCKER_USERNAME }}:${{ github.sha }}
+          ${{ vars.DOCKER_USERNAME }}/solar-system:${{ github.sha }}
           export IP=$(docker inspect -f '{{range .NetworkSettings.Networks}}{{.IPAddress}}{{end}}' solar-system-app)
           echo $IP
           echo Testing Image URL using wget
