--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -126,8 +126,7 @@ jobs:
         with:
           push: true
           tags: |
-            ${{ vars.DOCKER_USERNAME }}
-            ghcr.io/${{ github.repository_owner }}/solar-system
+            ${{ vars.DOCKER_USERNAME }}/solar-system:latest
 
   terraform:
     name: Terraform Deployment
@@ -178,7 +177,7 @@ jobs:
           aws-region: us-east-1
 
       - name: Update kubeconfig
-        run: aws eks --region us-east-1 update-kubeconfig --name solar-system-cluster
+        run: aws eks --region us-east-1 update-kubeconfig --name sprints-eks-cluster
 
 
       - name: Trigger App Deployment
@@ -187,7 +186,7 @@ jobs:
          aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
          aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
          aws_region: us-east-1
-         cluster: stage-eks-cluster
+         cluster: sprints-eks-cluster
 
       - name: Deploy to EKS
         run: |
