--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -149,6 +149,10 @@ jobs:
         with:
           terraform_version: "1.1.7"
 
+      - name: Terraform Force Unlock (cleanup stale lock)
+        run: terraform force-unlock -force 154a13e4-c568-d443-d773-9772fc80653b || true
+        working-directory: ./terraform
+
       - name: Terraform Init
         run: terraform init 
         working-directory: ./terraform
@@ -158,7 +162,7 @@ jobs:
         working-directory: ./terraform
 
       - name: Terraform Apply
-        run: terraform apply -auto-approve
+        run: terraform apply -auto-approve -lock=false
         working-directory: ./terraform
 
   deploy:
