Solar System Deployment Pipeline

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -193,4 +193,8 @@ jobs:
           kubectl apply -f deployment.yml
           kubectl apply -f service.yml
         working-directory: ./kubernetes
-
+        
+      - name: Verify Deployment
+        run: |
+          kubectl get pods  
+          kubectl get svc
