--- a/.github/workflows/k8s.yml
+++ b/.github/workflows/k8s.yml
@@ -25,7 +25,7 @@ jobs:
 
             - name: updat kubeconfig
               run: | 
-                    aws eks --region us-west-2 update-kubeconfig --name stage-eks-cluster
+                    aws eks --region us-west-2 update-kubeconfig --name sprints-eks-cluster
 
             - name: Trigger app deployment
               uses: statsig-io/kubectl-via-eksctl@main
@@ -33,7 +33,7 @@ jobs:
                  aws_access_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
                  aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
                  region: us-west-2
-                 cluster: stage-eks-cluster
+                 cluster: sprints-eks-cluster
 
 
             - name: Deploy k8s deployments
