--- a/kubernetes/deployment.yml
+++ b/kubernetes/deployment.yml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
         - name: microservice-container
-          image: ${{ vars.DOCKER_USERNAME }}/solar-system:latest
+          image: ${{ vars.DOCKER_USERNAME }}/solar-system
           ports:
             - containerPort: 3000
