--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -160,10 +160,39 @@ jobs:
       - name: Terraform Apply
         run: terraform apply -auto-approve
         working-directory: ./terraform
+      
+      - name: Get Terraform outputs
+        id: tf_outputs
+        run: |
+          VPC_ID=$(terraform output -raw vpc_id)
+          echo "VPC_ID=$VPC_ID" >> $GITHUB_ENV
+        working-directory: ./terraform
+
+  install-controller:
+    name: Install AWS Load Balancer Controller
+    needs: terraform
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v5
+      - uses: aws-actions/configure-aws-credentials@v4.3.1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
+      - run: aws eks --region us-east-1 update-kubeconfig --name sprints-eks-cluster
+      - run: |
+          kubectl apply -k "https://github.com/aws/eks-charts/stable/aws-load-balancer-controller//crds?ref=main"
+          helm repo add eks https://aws.github.io/eks-charts
+          helm upgrade --install aws-load-balancer-controller eks/aws-load-balancer-controller \
+            -n kube-system \
+            --set clusterName=sprints-eks-cluster \
+            --set serviceAccount.create=false \
+            --set region=us-east-1 \
+            --set vpcId=$VPC_ID
 
   deploy:
     name: Deploy to EKS
-    needs: terraform
+    needs: install-controller
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
