--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -107,14 +107,18 @@ jobs:
           push: false
           tags: ${{ vars.DOCKER_USERNAME }}/solar-system:latest
 
+      - name: Create .env file
+        run: |
+          echo "MONGO_USERNAME=${{ secrets.MONGO_USERNAME }}" >> .env
+          echo "MONGO_PASSWORD=${{ secrets.MONGO_PASSWORD }}" >> .env
+          echo "MONGO_URI=${{ secrets.MONGO_URI }}" >> .env
+
       - name: Test Docker image
         run: |  
           docker images
           docker run --rm --name solar-system-app -d \
           -p 3000:3000 \
-          -e MONGO_USERNAME=$MONGO_USERNAME \
-          -e MONGO_PASSWORD=$MONGO_PASSWORD \
-          -e MONGO_URI=$MONGO_URI \
+          --env-file .env \
           ${{ vars.DOCKER_USERNAME }}/solar-system:latest
           export IP=$(docker inspect -f '{{range .NetworkSettings.Networks}}{{.IPAddress}}{{end}}' solar-system-app)
           echo $IP
