--- a/.github/workflows/monitor_workflow.yml
+++ b/.github/workflows/monitor_workflow.yml
@@ -41,8 +41,11 @@ jobs:
               region: us-west-2
               cluster: stage-eks-cluster
 
-        - name: create monitoring namespace
-          run: kubectl create namespace monitoring --dry-run=client -o yaml | kubectl apply -f
+        - name: Output monitoring namespace YAML
+          run: kubectl create namespace monitoring --dry-run=client -o yaml
+          
+        - name: Create monitoring namespace
+          run: kubectl create namespace monitoring || true
 
         - name: Add Helm repos
           run: |
