--- a/.github/workflows/monitor_workflow.yml
+++ b/.github/workflows/monitor_workflow.yml
@@ -51,12 +51,22 @@ jobs:
             tail -n +1 /tmp/values.rendered.yaml
           working-directory: ./kubernetes
 
-        - name: Install/Upgrade kube-prometheus-stack
-          run: |
-            helm upgrade --install kube-prometheus-stack prometheus-community/kube-prometheus-stack \
-              --namespace monitoring \
-              --values /tmp/values.rendered.yaml \
-              --wait --timeout 15m
+        # - name: Install/Upgrade kube-prometheus-stack
+        #   run: |
+        #     helm upgrade --install kube-prometheus-stack prometheus-community/kube-prometheus-stack \
+        #       --namespace monitoring \
+        #       --values /tmp/values.rendered.yaml \
+        #       --wait --timeout 15m
+
+        - name: install prometheus
+          run: helm upgrade --install prometheus prometheus-community/prometheus \
+              --namespace monitoring --create-namespace --wait --timeout 10m
+
+        - name: install grafana
+          run: helm upgrade --install grafana grafana/grafana \
+              --namespace monitoring --set adminPassword=admin --wait --timeout 10m
+        
+
         - name: Apply ServiceMonitor for my app
           run: |
             kubectl apply -f servicemonitor-splar-system.yaml
