--- a/.github/workflows/monitor_workflow.yml
+++ b/.github/workflows/monitor_workflow.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     env: 
       AWS_REGION: us-west-2
-      EKS_CLUSTER_NAME: stage-eks-cluster
+      EKS_CLUSTER_NAME: sprints-eks-cluster
       GRAFANA_ADMIN_PASSWORD: ${{ secrets.grafana_admin_password }}
 
     steps:
@@ -31,7 +31,7 @@ jobs:
 
         - name: updat kubeconfig
           run: | 
-                aws eks --region us-west-2 update-kubeconfig --name stage-eks-cluster
+                aws eks --region us-west-2 update-kubeconfig --name sprints-eks-cluster
 
         - name: Output monitoring namespace YAML
           run: kubectl create namespace monitoring --dry-run=client -o yaml
@@ -51,13 +51,6 @@ jobs:
             tail -n +1 /tmp/values.rendered.yaml
           working-directory: ./kubernetes
 
-        # - name: Install/Upgrade kube-prometheus-stack
-        #   run: |
-        #     helm upgrade --install kube-prometheus-stack prometheus-community/kube-prometheus-stack \
-        #       --namespace monitoring \
-        #       --values /tmp/values.rendered.yaml \
-        #       --wait --timeout 15m
-
         - name: install prometheus
           run: helm upgrade --install prometheus prometheus-community/prometheus \
               --namespace monitoring --create-namespace --wait --timeout 10m
@@ -65,7 +58,6 @@ jobs:
         - name: install grafana
           run: helm upgrade --install grafana grafana/grafana \
               --namespace monitoring --set adminPassword=admin --wait --timeout 10m
-        
 
         - name: Apply ServiceMonitor for my app
           run: |
